# game-c-plus-plus

./: CMakeLists.txt  README.md  game.cpp  gameStateManager.cpp  gameStateManager.h  mouse.cpp  mouse.h  player.cpp  player.h  shoot.cpp  shoot.h  stats.cpp  stats.h
src/: main.cpp
src/coreMechanics/: enemy.cpp  enemy.h  player.cpp  player.h  playerCamera.cpp  playerCamera.h  settings.h  shoot.cpp  shoot.h  stats.cpp  sword.cpp  sword.h  test.cpp  weapon.cpp  weapon.h
src/gameStates/: gameState.h  gameStateManager.h  gameStateSkeleton.h  gameType.h  soloGame.h  soloLobby.h
